# forge

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  docker-compose.deployment.yaml  docker-compose.dev.yml  docker-compose.yml  forged.Dockerfile  forged.toml  graphql.config.yml
.cargo/: config.toml
.github/workflows/: ci.yaml
crates/: schema.prisma
crates/component/: Cargo.toml
crates/component/examples/: parse.rs
crates/component/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/forge_migrations/: Cargo.toml
crates/forge_migrations/src/: m20220101_000001_create_table.rs
crates/forged/: .gitignore  Cargo.toml  Dockerfile
crates/forged/config/: development.yaml  test.yaml
crates/forged/examples/: playground.rs
crates/forged/migration/src/: lib.rs  m20241012_120305_gates.rs
crates/forged/prisma/: schema.prisma
crates/forged/prisma/migrations/20240318152341_init/: migration.sql
crates/forged/prisma/migrations/20240430094410_auth/: migration.sql
crates/forged/prisma/migrations/20240629072748_patches/: migration.sql
crates/forged/prisma/migrations/20240629073549_cpatch/: migration.sql
crates/forged/prisma/migrations/20240629135747_init/: migration.sql
crates/forged/prisma/migrations/20240701191256_init/: migration.sql
crates/forged/prisma/migrations/20240713173756_/: migration.sql
crates/forged/prisma/migrations/20240713175449_/: migration.sql
crates/forged/prisma/migrations/20240714092654_/: migration.sql
crates/forged/src/: app.rs  component_helpers.rs  lib.rs  message_queue.rs  prisma.rs
crates/forged/src/api/: auth.rs  mod.rs
crates/forged/src/api/v1/: actor.rs  auth.rs  component.rs  gate.rs  mod.rs  publisher.rs
crates/forged/src/controllers/: gates.rs  mod.rs
crates/forged/src/graphql/: types.rs
crates/forged/src/graphql/mutation/: component.rs  gate.rs  mod.rs
crates/forged/src/graphql/query/: component.rs  gate.rs  mod.rs  publisher.rs
crates/forged/src/mailers/: auth.rs
crates/forged/src/models/: gates.rs  mod.rs
crates/forged/src/models/_entities/: gates.rs  mod.rs  prelude.rs
crates/forged/tests/models/: gates.rs  mod.rs  users.rs
crates/forged/tests/requests/: auth.rs  gates.rs  mod.rs  notes.rs  prepare_data.rs  user.rs
crates/forged/tests/requests/snapshots/: can_add@gate_request.snap
crates/forged/tests/tasks/: seed.rs
crates/gate/: Cargo.toml
crates/gate/src/: lib.rs
crates/ghwhrecv/: Cargo.toml
crates/ghwhrecv/src/: lib.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs
crates/integration/: Cargo.toml  integration_schema.json
crates/integration/examples/: emit_schema.rs  oi-userland.json  oi-userland.toml  oi-userland.yaml
crates/integration/src/: lib.rs
crates/pkgdev/: Cargo.toml  build.rs  forge.graphql.schema.json  package.kdl  pkg5
crates/pkgdev/queries/: defineGate.graphql  importComponent.graphql
crates/pkgdev/spec/: forged.spec.json
crates/pkgdev/src/: args.rs  component.rs  create.rs  forge.rs  lib.rs  main.rs  openid.rs
crates/pkgdev/src/metadata/: mod.rs  repology.rs
crates/pkgdev/src/modify/: mod.rs
crates/pkgdev/src/sources/: mod.rs  path.rs  unpack.rs
crates/pkgdev/tests/: build_ffmpeg.rs
crates/pkgdev/tests/common/: mod.rs
crates/pkgdev/tools/: fetch_openapi_spec.sh
crates/prisma/: Cargo.toml
crates/repology/: Cargo.toml
crates/repology/examples/: print.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
docs/Writerside/: c.list  fd.tree  v.list  writerside.cfg
docs/Writerside/cfg/: buildprofiles.xml
docs/Writerside/topics/: Components.md  Contributing-Packages-to-OpenIndiana-Userland.md  Declarative-Packages.md  Distributions.md  Facets-and-Package-splitting.md  Forge-Concepts.md  Gate.md  Gates.md  Manifest-References.md  Manifests.md  Multiple-Library-versions-and-SONAME.md  On-package-splitting.md  Package-Contribution-guide.md  Packaging-Automake-Software.md  Packaging-Buildscript-Software.md  Packaging-CMake-Software.md  Packaging-Perl-Software.md  Packaging-Python-Packages.md  Packaging-Rust-based-Software.md  Packaging-with-IPS.md  starter-topic.md
forge_migrations/src/: m20220101_000001_create_table.rs
prisma/: schema.prisma
sample_data/: garage.toml  userland-gate.kdl
sample_data/components/encumbered/: encumbered.kdl
sample_data/components/encumbered/components/ffmpeg/: 03-test-awk.patch  package.kdl
sample_data/components/encumbered/ffmpeg/: package.kdl
sample_data/components/runtime/openjdk-11/: Makefile  package.kdl
sample_data/components/web/curl/: Makefile  package.kdl
sample_data/make-rules/: common.mk  repology.mk  shared-macros.mk
sample_data/openjdk11/: package.kdl
src/: activities.rs  graphql.rs  lib.rs  message_queue.rs  prisma.rs
src/entity/: blob.rs  component.rs  gate.rs  job.rs  job_to_component_record.rs  merge_request_to_component_record.rs  mod.rs  package.rs  package_repository.rs  prelude.rs  publisher.rs  push_to_component_record.rs  sea_orm_active_enums.rs  source_merge_request.rs  source_repo.rs  source_repo_push.rs  source_to_gate_record.rs
src/graphql/: types.rs
src/graphql/mutation/: gate.rs  mod.rs  publisher.rs
src/graphql/query/: gate.rs  mod.rs  publisher.rs
web/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
web/prisma/: schema.prisma
web/src/: app.html
web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
web/src/routes/[gate]/[...component]/: +page.server.ts  +page.svelte
