[package]
name = "forge"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[dependencies]
github.workspace = true
miette = { workspace = true, features = ["fancy"] }
thiserror.workspace = true
serde.workspace = true
url.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
deadpool-lapin.workspace = true
axum.workspace = true
clap.workspace = true
hyper.workspace = true
config.workspace = true
serde_json.workspace = true
sea-orm = { version = "0.12.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-json", "mock", "macros", "with-chrono", "with-uuid"] }
f3-rs = { git = "https://git.batsense.net/ForgeFlux/f3-rs.git", version = "0.1.0" }
migration = { path = "crates/forge_migrations", version = "*" }
futures.workspace = true
uuid = { version = "1.6.1", features = ["v4", "serde"] }
async-graphql = { version = "6.0.11", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }
async-graphql-axum = "6.0.11"
lazy_static = "1.4.0"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.50"
miette = "5.10.0"
config = "0.13.3"
deadpool-lapin = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["json", "tracing", "env-filter"] }
axum = { version = "0.6.20", features = ["tracing"] }
clap = { version = "4.4.7", features = ["derive"] }
hyper = "0.14.27"
github = { version = "*", path = "crates/github" }
strum = { version = "0.25.0", features = ["derive"] }
forge = { version = "*", path = "." }
url = { version = "2.4.1", features = ["serde"] }
futures = "0.3.17"
