[package]
name = "forge"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[dependencies]
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
url.workspace = true
component.workspace = true
gate.workspace = true

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.50"
miette = "5.10.0"
config = "0.14.0"
deadpool-lapin = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["json", "tracing", "env-filter"] }
axum = { version = "0.6.20", features = ["tracing"] }
clap = { version = "4.4.7", features = ["derive"] }
hyper = "0.14.27"
github = { version = "*", path = "crates/github" }
strum = { version = "0.26.1", features = ["derive"] }
forge = { version = "*", path = "." }
url = { version = "2.4.1", features = ["serde"] }
futures = "0.3.17"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql", "sqlite", "mysql", "mssql"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
component = { version = "*", path = "crates/component" }
integration = { version = "0.1.0", path = "crates/integration" }
repology = { version = "*", path = "crates/repology" }
gate = { version = "*", path = "crates/gate" }