[package]
name = "component"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { workspace = true, features = ["fancy"] }
thiserror.workspace = true
serde.workspace = true
url.workspace = true
derive_builder = "0.20.0"
kdl = "4.6.0"
knuffel = { version = "3.2.0", features = ["minicbor"] }
schemars = { version = "0.8.16", features = ["semver", "chrono", "url", "uuid1", "derive_json_schema"] }
serde_json.workspace = true
utoipa.workspace = true
diff-struct.workspace = true