[package]
name = "forged"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github.workspace = true
miette = { workspace = true, features = ["fancy"] }
thiserror.workspace = true
serde.workspace = true
url.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
deadpool-lapin.workspace = true
axum = { workspace = true, features = ["multipart"] }
clap.workspace = true
hyper.workspace = true
config.workspace = true
serde_json.workspace = true
f3-rs = { git = "https://git.batsense.net/ForgeFlux/f3-rs.git", version = "0.1.0" }
futures.workspace = true
uuid = { version = "1.6.1", features = ["v4", "serde"] }
lazy_static = "1.4.0"
strum.workspace = true
integration.workspace = true
prisma-client-rust.workspace = true
component.workspace = true
itertools = "0.12.1"
forge.workspace = true
opendal = "0.45.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
twox-hash = "1.6.3"
sha3 = "0.10.8"
hex = "0.4.3"
rusty_paseto.workspace = true
octorust = "0.7.0"
chrono = "0.4.38"
openssh-keys = "0.6.2"
