[package]
name = "forged"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { workspace = true, features = ["fancy"] }
thiserror.workspace = true
serde.workspace = true
url.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
deadpool-lapin.workspace = true
axum = { workspace = true, features = ["multipart"] }
clap.workspace = true
hyper.workspace = true
config.workspace = true
serde_json.workspace = true
#f3-rs = { git = "https://git.batsense.net/ForgeFlux/f3-rs.git", version = "0.1.0" }
futures.workspace = true
uuid = { version = "1.6.1", features = ["v4", "serde"] }
prisma-client-rust.workspace = true
component.workspace = true
itertools = "0.13.0"
forge.workspace = true
opendal = { version = "0.47.1", features = [ "services-s3" ]}
reqwest = { version = "0.12.4", features = ["blocking"] }
sha3 = "0.10.8"
hex = "0.4.3"
octorust = "0.8.0-rc.1"
chrono = "0.4.38"
openssh-keys = "0.6.2"
utoipa.workspace = true
pasetors.workspace = true
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
semver = "1.0.23"
