[package]
name = "github"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["macros"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url = { version = "2.4.1", features = ["serde"] }
strum.workspace = true
tracing.workspace = true
axum-extra = { version = "0.9.3", features = ["typed-header"] }
