[package]
name = "integration"
version.workspace = true
edition.workspace = true

[dependencies]
miette.workspace = true
schemars = { version = "0.8.16", features = ["semver", "chrono", "url", "uuid1"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.27"
thiserror.workspace = true
toml = "0.8.8"

