[package]
name = "pkgdev"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component.workspace = true
integration.workspace = true
thiserror.workspace = true
miette = { workspace = true, features = ["fancy"] }
config.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
clap = { workspace = true, features = ["derive"] }
strum.workspace = true
reqwest = { version = "0.11", features = ["rustls-tls", "json", "multipart", "stream"], default-features = false }
workspace = { version = "*", path = "../workspace" }
repology.workspace = true
semver = { version = "1.0.22", features = ["serde"] }
gate.workspace = true
graphql_client = "0.14.0"
dirs = "5.0.1"
directories = "5.0.1"
forge.workspace = true
octorust = "0.7.0"
tokio.workspace = true
octocrab = "0.38.0"
secrecy = { version = "0.8.0", features = ["serde"] }
either = "1.11.0"
progenitor = "0.6.0"
futures.workspace = true
uuid = { version = "1.8.0", features = ["serde", "v4"] }
regress = "0.9.1"
schemars = { version = "0.8.17", features = ["uuid", "url"] }
