[package]
name = "pkgdev"
version.workspace = true
edition.workspace = true

[build-dependencies]
prettyplease = "0.2.22"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json.workspace = true
syn = "2.0.77"

[dependencies]
component.workspace = true
integration.workspace = true
thiserror.workspace = true
miette = { workspace = true, features = ["fancy"] }
config = { version = "0.1.0", path = "../config" }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
clap = { workspace = true, features = ["derive"] }
strum.workspace = true
reqwest = { version = "0.11", features = ["rustls-tls", "json", "multipart", "stream"], default-features = false }
reqwest_12 = { package = "reqwest", version = "0.12", features = ["rustls-tls", "json", "multipart", "stream"], default-features = false }
workspace = { version = "0.1.0", path = "../workspace" }
repology.workspace = true
semver = { version = "1.0.22", features = ["serde"] }
gate.workspace = true
directories = "5.0.1"
forge.workspace = true
tokio.workspace = true
octocrab = "0.39.0"
secrecy = { version = "0.8.0", features = ["serde"] }
either = "1.11.0"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
shellexpand = "3.1.0"
fs_extra = "1.3.0"
compress-tools = { version = "0.15.1", features = ["blocking"] }
microtemplate = "1.0.3"
file-matcher = "0.7.0"
uuid = { workspace = true, features = ["serde", "v4"] }
