[package]
name = "repology"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0"
miette.workspace = true
semver = { version = "1", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
expectorate = "1"
serde_json = "1"
