[package]
name = "worker"
version.workspace = true
edition.workspace = true


[dependencies]
thiserror.workspace = true
miette = { workspace = true, features=["fancy"]}
config.workspace = true
deadpool-lapin.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
clap.workspace = true
hyper.workspace = true
github.workspace = true
strum.workspace = true
forge.workspace = true
url.workspace = true
log = "0.4.20"
futures.workspace = true
