[package]
name = "workspace"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette.workspace = true
thiserror.workspace = true
url = "2.5.0"
sha2 = "0.11.0-pre.3"
hex = "0.4.3"
serde = { version = "1.0.199", features = ["derive"] }
shellexpand = "3.1.0"
reqwest = "0.12.7"
